--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>unityinfotech kochi - Corporate Training Lab</title>
+    <title>unityinfotech-prod </title>
     <style>
       /* Inline CSS for a clean corporate training landing page */
       :root{
