--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </main>
 
       <footer>
-        <div>© <span id="year"></span> unityinfotech kochi</div>
+        <div>© <span id="year"></span> unityinfotech kochi v2 </div>
         <div style="font-size:13px;color:var(--muted)">Built for corporate training labs • Designed for teams</div>
       </footer>
     </div>
